[package]
name = "fluvio-go"
version = "0.1.0"
authors = ["avi <hi@avi.im>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "fluvio_go"

[dependencies]
libc = "0.2.97"
fluvio = { version = "0.8.4" }
fluvio-future = { version = "0.3.5", features = ["io"] }

[build-dependencies]
cbindgen = "0.19.0"
